Fix the 1px gap at the bottom of the intro video that sometimes occurs. This appears to be a rendering bug as it doesn't happen every time.

--- a/client/pages/home/home.scss
+++ b/client/pages/home/home.scss
@@ -34,7 +34,7 @@
 .intro-container {
 	overflow: hidden;
 	position: relative;
-	height: 100vh;
+	height: 100.1vh;
 	background-color: rgb(50, 50, 50);
 }
 
